--- a/tweet_image_new/package.json
+++ b/tweet_image_new/package.json
@@ -2,13 +2,15 @@
   "name": "tweet_image",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:4000",
+  "homepage": "https://varunkrishna711.github.io/Hack_Night-XHackers-/",
+  "proxy": "https://tweet-to-image-converter.herokuapp.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
+    "gh-pages": "^3.2.3",
     "html2canvas": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
