--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "twitter": "^1.7.1"
