--- a/tweet_image_new/package.json
+++ b/tweet_image_new/package.json
@@ -9,9 +9,9 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "dom-to-image": "^2.6.0",
     "dotenv": "^16.0.0",
     "gh-pages": "^3.2.3",
-    "html2canvas": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
